# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2042 2011/11/23 20:31:34 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0 beta2 ????-??-??
 - 2011-11-23 Fixed bug#6139 - Hide current queue in queue move dialog in AgentTicketZoom.
 - 2011-11-23 Fixed bug#6365 - AdminMailAccount Queue field should be hidden or disabled if Dispatching
    is set to 'By Mail'.
 - 2011-11-23 Fixed bug#7930 - Depreciation warnings in error log when running OTRS on
    Perl 5.14.
 - 2011-11-21 Fixed bug#7914 - DynamicField Value Storage on AgentTicketActionCommon.pm and
    AgentTicketPhoneCommon.pm.
 - 2011-11-21 Fixed bug#7923 - Free field value not correctly migrated error on DBUpdate-to-3.1.pl.
 - 2011-11-21 Fixed bug#3804 - Stats in Bar or Pie chart formats don't display non-
    ascii characters correctly.
 - 2011-11-21 Fixed bug#7920 - New ACL mechanism does not update Ticket{StateType} when a State
    or StateID is given.
 - 2011-11-21 Use the secure attribute to restrict cookies to HTTPS if it is used.
 - 2011-11-21 Fixed bug#7909 - Errors should be logged in web server error log only.
 - 2011-11-21 Added feature to drag and drop/copy and paste images to richtext editor in firefox (base64 encoded).
 - 2011-11-19 Fixed bug#7917 - New ACL mechanism does not generate DynamicField hash check when
    only TicketID is given.

3.1.0 beta1 2011-11-22
 - 2011-11-15 Added IE7 to browser blacklist.
 - 2011-11-15 Updated German translation.
 - 2011-11-14 Added Idea#724 - Connect to IMAP servers using TLS encryption.
 - 2011-11-14 Fixed bug#7879 - Add the option to get mail from a specified IMAP folder.
 - 2011-11-14 Added new 'registration' mask to install process.