@@ -2,7 +2,7 @@
 # AgentTicketZoom.dtl - provides HTML for AgentTicketZoom.pm
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.dtl,v 1.198 2011/11/21 19:21:32 mb Exp $
+# $Id: AgentTicketZoom.dtl,v 1.199 2011/11/23 22:08:34 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -263,6 +263,9 @@
                 <h2>$QData{"ArticleCount"} $Text{"Article(s)"}</h2>
                 <div class="AdditionalInformation">
                     $Text{"Age"}: $Data{"Age"} &ndash; $Text{"Created"}: $TimeShort{"$Data{"Created"}"}
+<!-- dtl:block:CreatedBy -->
+                    $Text{"by"} $QData{"CreatedByUser"}
+<!-- dtl:block:CreatedBy -->
                 </div>
             </div>
             <div class="ActionRow">
